--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,27 +13,27 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        # auth:
-        #     anonymous: true
-        #     pattern: ^/api/auth/
-        #     guard:
-        #         authenticators:
-        #             - App\Security\LoginAuthenticator
-        #     logout:
-        #         path: app_logout
-        #         success_handler: App\Security\LogoutSuccessMessageHandler
+        auth:
+            anonymous: true
+            pattern: ^/api/auth/
+            guard:
+                authenticators:
+                    - App\Security\LoginAuthenticator
+            logout:
+                path: app_logout
+                success_handler: App\Security\LogoutSuccessMessageHandler
 
-        # api:
-        #     pattern: ^/api/*/
-        #     guard:
-        #         authenticators:
-        #             - App\Security\ApiTokenAuthenticator
+        api:
+            pattern: ^/api/*/
+            guard:
+                authenticators:
+                    - App\Security\ApiTokenAuthenticator
 
         main:
             anonymous: true
 
     access_control:
-        # - { path: ^/api/auth/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        # - { path: ^/api/auth/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        # - { path: ^/api/auth/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        # - { path: ^/api/*/, roles: ROLE_USER }
+        - { path: ^/api/auth/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/auth/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/auth/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/*/, roles: ROLE_USER }
